updated participating org to reflect nga designation in addition to caci/bits

--- a/er/5-introduction.adoc
+++ b/er/5-introduction.adoc
@@ -140,7 +140,7 @@ The following organizations participated in the Hackathon:
 * blockdore
 * Board Adviser
 * British Antarctic Survey
-* CACI (BIT Systems)
+* CACI (BIT Systems), NGA Mobile Apps
 * Cicy
 * CREAF
 * CubeWerx Inc.
