--- a/er/participanting-organizations/UniversityofMunster.adoc
+++ b/er/participanting-organizations/UniversityofMunster.adoc
@@ -12,12 +12,12 @@ Participant: Matthias Mohr
 
 ==== Implemented Solution
 
-* Tried to implement a WPS on top of the [openEO Google Earth Engine driver](https://github.com/Open-EO/openeo-earthengine-driver). Implementation was not possible due to WPS/GEE restrictions.
+* Tried to implement a WPS on top of the  openEO Google Earth Engine driver (https://github.com/Open-EO/openeo-earthengine-driver). Implementation was not possible due to WPS/GEE restrictions.
 
 ==== Proposed Alternatives
 
 * Workflows (process chaining) for WPS would be mandatory, but is not foreseen yet.
-* WPS: Use JSON Schema for data types? See [openEO approach for processes](https://open-eo.github.io/openeo-api/v/0.4.1/apireference/#tag/Process-Discovery).
+* WPS: Use JSON Schema for data types? See openEO approach for processes (https://open-eo.github.io/openeo-api/apireference/#tag/Process-Discovery).
 * CSW/CAT should align with STAC! Very similar approach, diverging doesn't make sense.
 
 ==== Experiences with OGC API Specifications
